# michalis_jr

./: Dockerfile  pyproject.toml  requirements.txt
bot/: bot.py  openai_utils.py
config/: chat_modes.yml  config.example.env
