[project]
name = "michalis-jr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.108.0",
    "pymongo>=4.15.1",
    "python-dotenv>=1.1.1",
    "python-telegram-bot[rate-limiter]>=22.4",
    "pyyaml>=6.0.2",
    "tiktoken>=0.11.0",
]
